--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/express": "^5.0.1",
+    "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/db": "workspace:*"
+    "@repo/common": "workspace:*",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1"
   }
 }
