--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc -b",
     "start": "node ./dist/index.js",
-    "dev": "npm run build && npm run start"
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "^22.15.3",
     "@types/ws": "^8.18.1",
+    "tsc-watch": "^6.2.1",
     "ws": "^8.18.1"
   }
 }
