--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/recoil": "^0.0.9",
     "axios": "^1.9.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
