--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
+    "@repo/redis": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
