--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.1",
+    "@types/react-redux": "^7.1.34",
     "@types/recoil": "^0.0.9",
     "axios": "^1.9.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
+    "react-redux": "^9.2.0",
     "recoil": "^0.7.7",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3"
