--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@repo/typescript-config": "workspace:*",
     "ioredis": "^5.6.1"
   }
 }
